Criado metodos para salvar e imprimir a receita do paciente